HW16: Add addAll tests and FIXMEs